--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/mishra_industries
+MONGO_URI=mongodb+srv://Lakshya_Goyal:Lakshya1304@mil.rapxinq.mongodb.net/mishra_industries?retryWrites=true&w=majority&appName=MIL
 JWT_SECRET=MISHRA_SUPER_SECRET_2026
 GMAIL_USER=your-email@gmail.com
 GMAIL_PASS=your-app-password
