--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-PORT=10000
+PORT=5000
 # MONGO_URI=mongodb+srv://mil:<db_password>@mil.m24rbbe.mongodb.net/MIL
 MONGO_URI=mongodb+srv://Lakshya_Goyal:Lakshya1304@mil.onowh63.mongodb.net/MIL
 JWT_SECRET=MISHRA_SUPER_SECRET_2026
 GMAIL_USER=your-email@gmail.com
 GMAIL_PASS=your-app-password
-NODE_ENV=dev
+NODE_ENV=production
