--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,6 @@ JWT_SECRET=MISHRA_SUPER_SECRET_2026
 GMAIL_USER=your-email@gmail.com
 GMAIL_PASS=your-app-password
 NODE_ENV=production
+CLOUDINARY_CLOUD_NAME=mishraindustries
+CLOUDINARY_API_KEY=473224244789999
+CLOUDINARY_API_SECRET=QA1fmHhN812OfIdJiRW1isLjqQg
