--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ JWT_SECRET=mishra_industries_super_secret_123
 GMAIL_USER=mishraindustriesltd@gmail.com
 GMAIL_PASS=gucqumwjfyvfusku
 NODE_ENV=production
+RAZORPAY_KEY_ID=rzp_test_SIoHu8r1UyV1bT
+RAZORPAY_KEY_SECRET=HSsArMzqxxACtYozn1Pt32mU
