--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,5 @@
 PORT=5000
-# MONGO_URI=mongodb+srv://mil:<db_password>@mil.m24rbbe.mongodb.net/MIL
-MONGO_URI=mongodb+srv://Lakshya_Goyal:Lakshya1304@mil.onowh63.mongodb.net/MIL
+MONGO_URI=mongodb+srv://sachinmishrapb_db_user:92E9LtcmgaeZMy2z@mil.m8kyiyi.mongodb.net/MIL
 JWT_SECRET=mishra_industries_super_secret_123
 GMAIL_USER=mishraindustriesltd@gmail.com
 GMAIL_PASS=gucqumwjfyvfusku
