--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://sachinmishrapb_db_user:92E9LtcmgaeZMy2z@mil.m8kyiyi.mongodb.net/MIL
+MONGO_URI=mongodb+srv://Sachin:Sachin123@mil.m8kyiyi.mongodb.net/
 JWT_SECRET=mishra_industries_super_secret_123
 GMAIL_USER=mishraindustriesltd@gmail.com
 GMAIL_PASS=gucqumwjfyvfusku
