--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,9 @@
 PORT=5000
-MONGO_URI=mongodb+srv://Sachin:Sachin123@mil.m8kyiyi.mongodb.net/
+MONGO_URI=mongodb+srv://Sachin:Sachin123@mil.m8kyiyi.mongodb.net/mishra_industries
 JWT_SECRET=mishra_industries_super_secret_123
 GMAIL_USER=mishraindustriesltd@gmail.com
 GMAIL_APP_PASSWORD=gucqumwjfyvfusku
-NODE_ENV=production
+NODE_ENV=development
+MODE=dev
 RAZORPAY_KEY_ID=rzp_test_SIoHu8r1UyV1bT
 RAZORPAY_KEY_SECRET=HSsArMzqxxACtYozn1Pt32mU
