--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,13 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Mishra Industries Backend API",
-  "main": "server.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "npx nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "itest": "node tests/run_tests.js"
   },
   "keywords": [],
   "author": "Lakshya Goyal",
@@ -25,5 +27,14 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
-  }
+  },
+  "repository": {},
+  "bin": {},
+  "bugs": {},
+  "homepage": "",
+  "engines": {},
+  "contributors": [
+    "nishur31"
+  ],
+  "files": []
 }
